Sat Aug 19 18:39:00 BST 2000 Olly Betts

	* Added testcase for handling of multiple postings of a term at the
	  same position (adddoc1).

	* Fixed wdf handling in inmemory backend.

	* Fixed handling of writable databases in BackendManager (they can't
	  safely be reused as the previous test may have altered the
	  contents).

	* Added new test category to apitest: tests that need a writable
	  database.

Sat Aug 19 15:01:00 BST 2000 Olly Betts

	* Muscat36 db backend now autodetects flimsy vs heavyduty

Sat Aug 19 12:30:00 BST 2000 Olly Betts

	* Naming consistency - now always say "sleepycat" never "sleepy".
	  Only externally visible effect is in options to configure.

	* A few header multiple inclusion guards were misnamed - fixed.

Fri Aug 18 17:49:00 BST 2000 Olly Betts

	* Pruned completed and no-longer-relevant tasks from TODO.

	* DatabaseBuilder now throws OmFeatureUnavailableError rather than
	  OmOpeningError if you try to use a backend which isn't compiled in.

	* Added checks for correct handling of unknown and unavailable
	  backends by DatabaseBuilder.

Fri Aug 18 16:22:00 BST 2000 Olly Betts

	* WARNING: Incompatible (minor) changes to API!

	* OmSettings::get_value* -> OmSettings::get*
	  OmSettings::set_value -> OmSettings::set

Fri Aug 18 16:03:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix to configuration system so that it runs the test programs -
	  it should now complain if the wrong versions of sleepycat libraries
	  are lying about.

Fri Aug 18 15:39:00 BST 2000 Olly Betts

	* WARNING: Incompatible (minor) changes to API!

	* OmMatchDecider::operator() now takes a const reference rather than
	  a const pointer.  Removed warning that arguments to this method
	  are highly likely to change.

	* Changed a few methods to take const references to avoid
	  unnecessary object copying (changes API, but code using API won't
	  need changing).

Fri Aug 18 14:31:00 BST 2000 Olly Betts
